--- a/Lab3/Views/Shared/_Layout.cshtml
+++ b/Lab3/Views/Shared/_Layout.cshtml
@@ -1,9 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@inject IConfiguration Configuration
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Lab3</title>
+
+    <title>@ViewData["Title"] - @Configuration["NombreAplication"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Lab3.styles.css" asp-append-version="true" />
@@ -12,20 +15,29 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Lab3</a>
+
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@Configuration["NombreAplicacion"]</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" style="color: #d63384; font-weight: 500;" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" style="color: #d63384; font-weight: 500;" asp-area="" asp-controller="Home" asp-action="About">Acerca</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: #d63384; font-weight: 500;" asp-area="" asp-controller="Home" asp-action="Contact">Contáctanos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: #d63384; font-weight: 500;" asp-area="" asp-controller="Producto" asp-action="Index">Productos</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
@@ -38,7 +50,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Lab3 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
+            &copy; 2025 - @Configuration["NombreAplication"] - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
